<resources>
    <string name="app_name">michat</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="logout">Log out</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">send_message</string>
    <string name="receivedMessage">This is received message</string>
    <string name="sentMessage">This is sent message</string>
</resources>