<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp">

    <ImageView
        android:id="@+id/logo.png"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"

        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/logo.png"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="13dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_background"
        android:hint="@string/email"
        android:paddingStart="13dp"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_email"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_background"
        android:hint="@string/password"
        android:paddingStart="13dp"
        android:autofillHints=""
        android:inputType="numberPassword"
        tools:ignore="RtlSymmetry" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up" />

</RelativeLayout>